actualizando el proyecto

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sistema-comercioelectronico-api",
+  "name": "sistema-comercio-electronico-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && node dist/server",
+    "start": "npm run build & node dist/server",
     "dev": "nodemon src/server.ts",
     "build": "tsc"
   },
@@ -13,14 +13,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2",
-    "morgan": "^1.10.0"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.11.5",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^22.10.2",
-    "nodemon": "^3.1.9",
+    "@types/node": "^22.10.1",
+    "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
