--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "joi": "^17.13.3",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.5",
     "typeorm": "^0.3.20"
